fix background overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,10 +10,12 @@
 #app {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgba(240, 240, 240, 1);
+  overflow:scroll
 }
 
 nav {
